Add GetNodes gateway endpoint
